Fixed responsiveness of grid spacing

--- a/sprint-1/styles/_variables.scss
+++ b/sprint-1/styles/_variables.scss
@@ -29,3 +29,8 @@ $tablet-padding:3%;
 
 // Corresponds to 180px @ 1440px screen width
 $desk-padding:12.5%;
+
+// Grid Spacing
+$mobile-grid-spacing: 5%;
+$tablet-grid-spacing: 3.3%;
+$desktop-grid-spacing: 2.26%;
